Crear vista de partida con tablero, nombre de jugadores, tiempo y marcador provisional