@@ -2,34 +2,56 @@ package es.iesquevedo.repository.firebase;
 
 import es.iesquevedo.service.auth.AuthService;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.URLConnection;
 
 /**
  * Cliente HTTP minimo para llamadas a Firebase RTDB.
  */
 public class FirebaseHttpClient {
     private final String baseUrl;
-    private final HttpClient httpClient;
     private final AuthService authService;
 
-    public FirebaseHttpClient(String baseUrl, HttpClient httpClient, AuthService authService) {
+    public FirebaseHttpClient(String baseUrl, AuthService authService) {
         this.baseUrl = baseUrl;
-        this.httpClient = httpClient;
         this.authService = authService;
     }
 
-    public HttpResponse<String> get(String path) throws IOException, InterruptedException {
-        HttpRequest.Builder builder = HttpRequest.newBuilder()
-                .uri(URI.create(baseUrl + path))
-                .GET();
+    public HttpResponse<String> get(String path) throws IOException {
+        URL url = new URL(baseUrl + path);
+        URLConnection connection = url.openConnection();
 
-        authService.getToken().ifPresent(token -> builder.header("Authorization", "Bearer " + token));
+        if (authService.getToken().isPresent()) {
+            connection.setRequestProperty("Authorization", "Bearer " + authService.getToken().get());
+        }
 
-        return httpClient.send(builder.build(), HttpResponse.BodyHandlers.ofString());
+        BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+        StringBuilder response = new StringBuilder();
+        String line;
+        while ((line = reader.readLine()) != null) {
+            response.append(line);
+        }
+        reader.close();
+
+        return new HttpResponse<>(response.toString());
+    }
+
+    /**
+     * Clase simple para encapsular respuesta HTTP
+     */
+    public static class HttpResponse<T> {
+        private final T body;
+
+        public HttpResponse(T body) {
+            this.body = body;
+        }
+
+        public T body() {
+            return body;
+        }
     }
 }
 
